[gd_scene load_steps=17 format=2]

[ext_resource path="res://NEAT_usability/fonts/dynamics/roboto-thin.tres" type="FontFile" id=1]
[ext_resource path="res://NEAT_usability/fonts/dynamics/roboto-medium-italic.tres" type="FontFile" id=2]
[ext_resource path="res://NEAT_usability/fonts/dynamics/roboto-light-italic.tres" type="FontFile" id=3]
[ext_resource path="res://demos/cars/splash_screen/car_splash.gd" type="Script" id=4]

[sub_resource type="Gradient" id=1]
offsets = PackedFloat32Array( 0, 0.896774 )
colors = PackedColorArray( 0.819608, 0.823529, 0.235294, 1, 0.721569, 0.294118, 0.435294, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="CarSplash" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 1024, 600 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 1024, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_right = 1024.0
offset_bottom = 600.0
theme_override_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
offset_right = 1024.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource( 1 )
text = "Car Demo"
align = 1

[node name="Options" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 135.0
offset_right = 1024.0
offset_bottom = 600.0
clip_contents = true
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="TrainingMode" type="Button" parent="MarginContainer/VBoxContainer/Options"]
offset_left = 281.0
offset_right = 499.0
offset_bottom = 465.0
theme_override_styles/hover = SubResource( 3 )
theme_override_styles/pressed = SubResource( 4 )
theme_override_styles/focus = SubResource( 5 )
theme_override_styles/disabled = SubResource( 6 )
theme_override_styles/normal = SubResource( 7 )
theme_override_fonts/font = ExtResource( 2 )
text = "Train Cars"

[node name="RacingMode" type="Button" parent="MarginContainer/VBoxContainer/Options"]
offset_left = 529.0
offset_right = 742.0
offset_bottom = 465.0
theme_override_styles/hover = SubResource( 3 )
theme_override_styles/pressed = SubResource( 4 )
theme_override_styles/focus = SubResource( 5 )
theme_override_styles/disabled = SubResource( 6 )
theme_override_styles/normal = SubResource( 7 )
theme_override_fonts/font = ExtResource( 2 )
text = "Race Cars"

[node name="Tracks" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Options"]
visible = false
offset_left = 158.0
offset_right = 442.0
offset_bottom = 861.0

[node name="ChooseTrack" type="Label" parent="MarginContainer/VBoxContainer/Options/Tracks"]
offset_right = 284.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource( 3 )
text = "Choose Track"
align = 1

[node name="TrackSelect" type="ItemList" parent="MarginContainer/VBoxContainer/Options/Tracks"]
offset_top = 61.0
offset_right = 284.0
offset_bottom = 361.0
custom_minimum_size = Vector2( 284, 300 )

[node name="Opponents" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Options"]
visible = false
offset_left = 315.0
offset_right = 708.0
offset_bottom = 861.0

[node name="ChooseOpponents" type="Label" parent="MarginContainer/VBoxContainer/Options/Opponents"]
offset_right = 393.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource( 3 )
text = "Choose Opponents"
align = 1

[node name="OpponentSelect" type="ItemList" parent="MarginContainer/VBoxContainer/Options/Opponents"]
offset_top = 61.0
offset_right = 393.0
offset_bottom = 361.0
custom_minimum_size = Vector2( 393, 300 )
select_mode = 1

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
offset_top = 543.0
offset_right = 1024.0
offset_bottom = 600.0
theme_override_styles/hover = SubResource( 8 )
theme_override_styles/pressed = SubResource( 9 )
theme_override_styles/focus = SubResource( 10 )
theme_override_styles/disabled = SubResource( 11 )
theme_override_styles/normal = SubResource( 12 )
theme_override_fonts/font = ExtResource( 2 )
text = "Start"
